Разработал аннотацию Get. Нужно разработать аннотацию Param